--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,39 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <script src="main.js"></script>
 </head>
+
 <body>
+    <nav>
+        <ul>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="index.html">About</a></li>
+            <li><a class="name" href="index.html">Mike Santarelli</a></li>
+        </ul>
+    </nav>
+
+    <div>
     
+            <h1>Contact</h1>
+            <hr>
+            <label>Name</label>
+            <br>
+            <input type="text" id="fname">
+            <br>
+            <label>Email</label>
+            <br>
+            <input type="text" id="lname">
+            <label>Message</label>
+            <textarea rows="12" cols="128"></textarea>
+            <input type="submit">
+    
+
+    </div>
+
 </body>
+<hr id="cap">
+<footer>
+        copyright&copy
+    </footer>
+
 </html>
