--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,38 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <script src="main.js"></script>
 </head>
+
+
+<ul>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="portfolio.html">Portfolio</a></li>
+    <li><a href="index.html">About</a></li>
+    <li><a class="name" href="index.html">Mike Santarelli</a></li>
+</ul>
+
 <body>
-    
+
+
+    <div>
+        <div class="container">
+            <h1>Portfolio</h1>
+            <hr>
+
+            <p><a href="#"><img id="port" src="assets/images/mike young-time.JPG" alt=""></a></p>
+            <p><a href="#"><img id="port" src="assets/images/plant.JPG" alt=""></a></p>
+            <p><a href="#"><img id="port" src="assets/images/jetpack.JPG" alt=""></a></p>
+            <p><a href="#"><img id="port" src="assets/images/meme.jpg" alt=""></a></p>
+            <p><a href="#"><img id="port" src="assets/images/infinity.JPG" alt=""></a></p>
+
+
+
+        </div>
+    </div>
+
 </body>
+<hr id="cap">
+<footer>
+    copyright&copy
+</footer>
+
 </html>
