--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
             <p><a href="#"><img id="port" src="assets/images/mike young-time.JPG" alt=""></a></p>
             <p><a href="#"><img id="port" src="assets/images/plant.JPG" alt=""></a></p>
             <p><a href="#"><img id="port" src="assets/images/jetpack.JPG" alt=""></a></p>
-            <p><a href="#"><img id="port" src="assets/images/baby.jpg" alt=""></a></p>
+            <p><a href="#"><img id="port" src="assets/images/meme.jpg" alt=""></a></p>
             <p><a href="#"><img id="port" src="assets/images/infinity.JPG" alt=""></a></p>
 
 
