--- a/contact.html
+++ b/contact.html
@@ -26,11 +26,11 @@
             <hr>
             <label>Name</label>
             <br>
-            <input type="text" id="fname">
+            <input type="text" id="fname" placeholder="John Smith">
             <br>
             <label>Email</label>
             <br>
-            <input type="text" id="lname">
+            <input type="text" id="email" placeholder="example@gmail.com">
             <label>Message</label>
             <textarea rows="12" cols="128"></textarea>
             <input type="submit">
